haha nothing great - ill delete this cahnged eventually

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -10,6 +10,7 @@ import "../components/landing-page.css";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="quickapiLogo.png"></link>
     <title>QuickAPI - Blazing-fast API Mock Tool</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
